[gd_scene load_steps=11 format=3 uid="uid://c7boss1basic"]

[ext_resource type="Script" path="res://GameFiles/SRC/Bosses/Scripts/Boss.gd" id="1_boss"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.8
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_boss"]
albedo_color = Color(0.6, 0.2, 0.2, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
material = SubResource("StandardMaterial3D_boss")
radius = 0.8
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eyes"]
albedo_color = Color(0.1, 0.05, 0.05, 1)
emission_enabled = true
emission = Color(1, 0.2, 0.2, 1)
emission_energy_multiplier = 2.0

[sub_resource type="SphereMesh" id="SphereMesh_eyes"]
material = SubResource("StandardMaterial3D_eyes")
radius = 0.15
height = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_hitbox"]
size = Vector3(1.8, 3.2, 1.8)

[sub_resource type="ViewportTexture" id="ViewportTexture_1"]
viewport_path = NodePath("HealthBarViewport/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_healthbar"]
transparency = 1
albedo_texture = SubResource("ViewportTexture_1")
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_1"]
material = SubResource("StandardMaterial3D_healthbar")
size = Vector2(2, 0.3)

[node name="BasicBoss" type="CharacterBody3D" groups=["boss", "enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_boss")
max_health = 300.0
defense = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="Model" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="LeftEye" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 2.2, -0.7)
mesh = SubResource("SphereMesh_eyes")

[node name="RightEye" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 2.2, -0.7)
mesh = SubResource("SphereMesh_eyes")

[node name="Spikes" type="Node3D" parent="Model"]

[node name="Spike1" type="CSGCylinder3D" parent="Model/Spikes"]
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, -0.6, 2.5, 0)
radius = 0.5
height = 1.0
cone = true
material = SubResource("StandardMaterial3D_boss")

[node name="Spike2" type="CSGCylinder3D" parent="Model/Spikes"]
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0.6, 2.5, 0)
radius = 0.5
height = 1.0
cone = true
material = SubResource("StandardMaterial3D_boss")

[node name="Spike3" type="CSGCylinder3D" parent="Model/Spikes"]
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 2.5, -0.6)
radius = 0.5
height = 1.0
cone = true
material = SubResource("StandardMaterial3D_boss")

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4
monitoring = true
monitorable = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_hitbox")

[node name="HealthBarViewport" type="SubViewportContainer" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
size = Vector2(200, 30)
stretch = true

[node name="SubViewport" type="SubViewport" parent="HealthBarViewport"]
transparent_bg = true
size = Vector2i(200, 30)
render_target_update_mode = 4

[node name="HealthBar" type="ProgressBar" parent="HealthBarViewport/SubViewport"]
custom_minimum_size = Vector2(200, 30)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBarViewport/SubViewport/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "300 / 300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBarDisplay" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
mesh = SubResource("QuadMesh_1")
skeleton = NodePath("../HealthBarViewport")

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
text = "Training Dummy"
font_size = 48
outline_size = 10
billboard = 1